# VulkanRays

./: CMakeLists.txt  README.md
VulkanRays/: CMakeLists.txt  CoreRendering.cpp  CoreRendering.h  MathUtils.cpp  MathUtils.h  RenderObject.cpp  RenderObject.h  VulkanApp.cpp  VulkanApp.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRays.cpp  VulkanRays.h  VulkanSwapchain.cpp  VulkanSwapchain.h  triangle.frag  triangle.frag.inc  triangle.frag.spv  triangle.vert  triangle.vert.inc  triangle.vert.spv
VulkanRays/shaders/: build_shaders.bat  triangle.vert
